# docmaker

./: .gitignore  CHANGELOG.md  README.md  docmaker.yaml  pyproject.toml
.github/workflows/: build-release.yml  ci.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check-bundle.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BreadcrumbTrail.tsx  GraphMinimap.tsx  GraphSearchBar.tsx  GraphView.tsx  KeyboardShortcutHelp.tsx  NodeDetails.tsx  OnboardingWizard.tsx  RecentProjects.tsx  ResizablePanel.tsx  Sidebar.tsx  SourcePreview.tsx  StatusBar.tsx
frontend/src/contexts/: SettingsContext.tsx
frontend/src/e2e/: app.spec.ts  fullstack.spec.ts  perf.spec.ts
frontend/src/hooks/: useDropZone.ts  useKeyboardNavigation.ts  useLayoutWorker.ts  useNavigationHistory.ts  usePyloid.ts
frontend/src/test/: setup.ts
frontend/src/types/: graph.ts  pyloid.d.ts  react-cytoscapejs.d.ts  (+1 more)
packaging/: docmaker.spec  launcher.py  version_info.txt
packaging/linux/: build_deb.sh  docmaker.desktop
packaging/scripts/: build.py  build_unix.sh  build_windows.bat  convert_icons.py
src/docmaker/: __init__.py  cache.py  cli.py  config.py  crawler.py  llm.py  models.py  pipeline.py
tests/: __init__.py  test_cache.py  test_config.py  test_crawler.py  test_go_parser.py  test_graph_builder.py  test_ipc.py  test_java_parser.py  test_js_parser.py  test_kotlin_parser.py  test_linker.py  test_llm.py  test_llm_summarization.py  test_markdown.py  test_markdown_generator.py  test_models.py  test_parser.py  test_pipeline.py  test_python_parser.py  test_registry.py  test_settings.py  test_typescript_parser.py
tests/e2e/: bridge_server.py
(+57 files in other folders)
