[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmaker"
version = "0.1.0"
description = "Code-to-Knowledge Pipeline: Crawl codebases and generate interlinked Obsidian documentation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Victor" }
]
keywords = ["documentation", "obsidian", "code-analysis", "api-docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/LLRHook/docmaker"
Repository = "https://github.com/LLRHook/docmaker"
Documentation = "https://github.com/LLRHook/docmaker#readme"
Issues = "https://github.com/LLRHook/docmaker/issues"
Changelog = "https://github.com/LLRHook/docmaker/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
docmaker = "docmaker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docmaker"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
